Notifications Nearly Finished and Tooltips Visibility Bugs Fixed

--- a/src/portal/assets/Todo/todo.css
+++ b/src/portal/assets/Todo/todo.css
@@ -69,3 +69,7 @@
 	from { opacity: 0; }
 	to { opacity: 1; }
 }
+
+.FTG-Progress-Wrapper {
+	pointer-events: visibleFill !important;
+}
